Revision history for Perl-Critic-Bangs

1.12    
====================================
[DOCUMENTATION]
Added more documentation about how ProhibitNumberedNames does its
matching.  There was nothing in there that said that if "utf8" was an
exception that "foo_utf8" would pass cleanly.


1.10    Mon Aug 20 14:26:07 CDT 2012
====================================
[ENHANCEMENTS]
Added ProhibitDebuggingModules.  Thanks to Mike Doherty for the code,
and to Breno G. de Oliveira, Joel Berger and Jeffrey Thalhammer for
helping with implementation details.


1.08    Mon Jun 20 11:56:49 CDT 2011
====================================
Official release, no changes from 1.07_02


1.07_02 Tue May 17 11:06:41 CDT 2011
====================================
[ENHANCEMENTS]
The list of bitwise operators prohibited is now:

    & | ^ ~ &= |= ^=


1.07_01 Mon May 16 23:48:20 CDT 2011
====================================
As of 1.07_01, Perl::Critic::Bangs is released under Artistic License 2.0,
rather than dual-licensed with the GPL.

[ENHANCEMENTS]
Added a new policy, ProhibitBitwiseOperators.  Usually when you see
a bitwise operator like | or & in a Perl program, it's a mistake that
should have been || or &&.  It also checks for ^ and ~ as bitwise ops.
Thanks to Mike O'Regan.

[FIXES]
Remove use of Perl::Critic::Utils::PPIRegexp, which has been removed
from the Perl-Critic distribution, with calls to native PPI methods. This
allows P::C::Bangs to install when using perl 5.14.  Thanks, Elliot Shank.


1.06    Sun May 23 00:56:49 CDT 2010
====================================
[ENHANCEMENTS]
ProhibitFlagComments now checks POD for XXXes and the like, not just
comments.  Thanks to Matt Boyle.


1.04    Sat Apr 17 11:13:42 CDT 2010
====================================
[FIXED]
Fixed a problem with dereferencing a node in ProhibitRefProtoOrProto.
Thanks to Mike Hind.


1.02    Sat Mar  7 14:40:38 CST 2009
====================================
No new features.
